@@ -2,8 +2,12 @@ Package: lfe
 Version: 2.8-4
 Date: 2019-12-10
 Title: Linear Group Fixed Effects
-Authors@R: person("Simen", "Gaure", email="Simen.Gaure@frisch.uio.no", role=c("aut","cre"),
-        comment=c(ORCID="https://orcid.org/0000-0001-7251-8747"))
+Authors@R: c(person("Simen", "Gaure", email="Simen.Gaure@frisch.uio.no", role=c("aut","cre"),
+           comment=c(ORCID="https://orcid.org/0000-0001-7251-8747")),
+	   person("Grant","McDermott", email="grantmcd@uoregon.edu", role="ctb"),
+	   person("Karl", "Dunkle Werner", role="ctb"),
+	   person("Matthieu","Stigler",role="ctb"),
+	   person("Daniel","Lüdecke",email="mail@danielluedecke.de",role="ctb"))
 Copyright: 2011-2018, Simen Gaure
 Depends: R (>= 2.15.2), Matrix (>= 1.1-2)
 Imports: Formula, xtable, compiler, utils, methods, sandwich, parallel
