@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="/doc/html/R.css" />
 </head><body>
 <h1> Vignettes and other documentation
-<img class="toplogo" src="/doc/html/logo.jpg" alt="[R logo]" />
+<img class="toplogo" src="/doc/html/Rlogo.svg" alt="[R logo]" />
 </h1>
 <hr/>
 <div style="text-align: center;">
@@ -19,26 +19,26 @@
 <col style="width:  8%;" />
 <col style="width:  8%;" />
 <col style="width:  8%;" />
-<tr><td style="text-align: right; vertical-align: top;"><a href="../../../library/lfe/doc/biascorrection.pdf">lfe::biascorrection</a></td>
+<tr><td style="text-align: right; vertical-align: top;"><a href="biascorrection.pdf">lfe::biascorrection</a></td>
 <td></td><td valign="top">Limited mobility bias correction</td>
-<td valign="top"><a href="../../../library/lfe/doc/biascorrection.pdf">PDF</a></td>
-<td valign="top"><a href="../../../library/lfe/doc/biascorrection.Rnw">source</a></td>
+<td valign="top"><a href="biascorrection.pdf">PDF</a></td>
+<td valign="top"><a href="biascorrection.Rnw">source</a></td>
 <td valign="top" style="white-space: nowrap"></td></tr>
-<tr><td style="text-align: right; vertical-align: top;"><a href="../../../library/lfe/doc/identification.pdf">lfe::identification</a></td>
+<tr><td style="text-align: right; vertical-align: top;"><a href="identification.pdf">lfe::identification</a></td>
 <td></td><td valign="top">Multicollinearity, identification, and estimable functions</td>
-<td valign="top"><a href="../../../library/lfe/doc/identification.pdf">PDF</a></td>
-<td valign="top"><a href="../../../library/lfe/doc/identification.Rnw">source</a></td>
-<td valign="top" style="white-space: nowrap"><a href="../../../library/lfe/doc/identification.R">R code</a></td></tr>
-<tr><td style="text-align: right; vertical-align: top;"><a href="../../../library/lfe/doc/lfehow.pdf">lfe::lfehow</a></td>
+<td valign="top"><a href="identification.pdf">PDF</a></td>
+<td valign="top"><a href="identification.Rnw">source</a></td>
+<td valign="top" style="white-space: nowrap"><a href="identification.R">R code</a></td></tr>
+<tr><td style="text-align: right; vertical-align: top;"><a href="lfehow.pdf">lfe::lfehow</a></td>
 <td></td><td valign="top">How lfe works</td>
-<td valign="top"><a href="../../../library/lfe/doc/lfehow.pdf">PDF</a></td>
-<td valign="top"><a href="../../../library/lfe/doc/lfehow.Rnw">source</a></td>
-<td valign="top" style="white-space: nowrap"><a href="../../../library/lfe/doc/lfehow.R">R code</a></td></tr>
-<tr><td style="text-align: right; vertical-align: top;"><a href="../../../library/lfe/doc/speed.pdf">lfe::speed</a></td>
+<td valign="top"><a href="lfehow.pdf">PDF</a></td>
+<td valign="top"><a href="lfehow.Rnw">source</a></td>
+<td valign="top" style="white-space: nowrap"><a href="lfehow.R">R code</a></td></tr>
+<tr><td style="text-align: right; vertical-align: top;"><a href="speed.pdf">lfe::speed</a></td>
 <td></td><td valign="top">Convergence rate with examples</td>
-<td valign="top"><a href="../../../library/lfe/doc/speed.pdf">PDF</a></td>
-<td valign="top"><a href="../../../library/lfe/doc/speed.Rnw">source</a></td>
-<td valign="top" style="white-space: nowrap"><a href="../../../library/lfe/doc/speed.R">R code</a></td></tr>
+<td valign="top"><a href="speed.pdf">PDF</a></td>
+<td valign="top"><a href="speed.Rnw">source</a></td>
+<td valign="top" style="white-space: nowrap"><a href="speed.R">R code</a></td></tr>
 </table>
 <h2>Other files in the <span class="samp">doc</span> directory</h2>
 <table width="100%">
