@@ -2,6 +2,8 @@
 \title{lfe news}
 \section{Changes in version 2.8-4}{
   \itemize{
+    \item Support for nested clusters and reghdfe-option by Grant McDermott and Karl
+    Dunkle Werner.
     \item Changed some extern declarations in the C-code to comply with
     standards enforced by the upcoming gcc10.
     \item Changed inner workings of the \code{unnamed()} and
